tests/baselines/reference/parserAmbiguityWithBinaryOperator4.errors.txt
parserAmbiguityWithBinaryOperator4.ts(3,9): error TS2722: Cannot invoke an object which is possibly 'undefined'.
parserAmbiguityWithBinaryOperator4.ts(3,11): error TS2749: 'b' refers to a value, but is being used as a type here. Did you mean 'typeof b'?
parserAmbiguityWithBinaryOperator4.ts(3,14): error TS2749: 'b' refers to a value, but is being used as a type here. Did you mean 'typeof b'?
parserAmbiguityWithBinaryOperator4.ts(3,17): error TS18048: 'c' is possibly 'undefined'.


==== parserAmbiguityWithBinaryOperator4.ts (4 errors) ====
    function g() {
        var a, b, c;
        if (a<b, b>(c + 1)) { }
            ~
!!! error TS2722: Cannot invoke an object which is possibly 'undefined'.
              ~
!!! error TS2749: 'b' refers to a value, but is being used as a type here. Did you mean 'typeof b'?
                 ~
!!! error TS2749: 'b' refers to a value, but is being used as a type here. Did you mean 'typeof b'?
                    ~
!!! error TS18048: 'c' is possibly 'undefined'.
    }